# personal-wiki

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker_image.yaml  docker_publish.yaml  test.yaml
pages/: about.html  index.html
scripts/: script.js
src/: db.rs  main.rs
