[package]
name = "personal-wiki"
version = "0.1.0"
authors = ["Clelia (Astra) Bertelli <clelia@runllama.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
markdown = "1.0.0"
turso = "0.3.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
