[package]
name = "personal-wiki"
version = "0.1.0"
authors = ["Clelia (Astra) Bertelli <clelia@runllama.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
dioxus-fullstack = "0.7.2"
markdown = "1.0.0"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower-http = {version = "0.6.2", features = ["fs"]}
libsql = "0.9.29"
bcrypt = "0.17.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
derivative = "2.2.0"
